crates/parser/tests/parser/snapshots/main__parser__fixtures__where_clause.snap
---
source: crates/parser/tests/parser/fixtures.rs
expression: module
---
decls:
  - DefFn:
      platform: ~
      name: compare
      visibility: Private
      type_params: []
      params:
        - name: a
          ty:
            Var:
              name: a
              span:
                - 28
                - 29
          span:
            - 25
            - 29
        - name: b
          ty:
            Var:
              name: a
              span:
                - 34
                - 35
          span:
            - 31
            - 35
      constraints:
        - trait_name: Ord
          type_args:
            - Var:
                name: a
                span:
                  - 51
                  - 52
          span:
            - 51
            - 57
      return_type:
        Named:
          name: Bool
          span:
            - 40
            - 44
      body:
        BinaryOp:
          op: Lt
          lhs:
            Var:
              name: a
              span:
                - 60
                - 61
          rhs:
            Var:
              name: b
              span:
                - 64
                - 65
          span:
            - 60
            - 65
      span:
        - 13
        - 65
